--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -4,5 +4,7 @@
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
+  <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
+  <package id="Unity" version="4.0.1" targetFramework="net461" />
 </packages>
