--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -13,4 +13,5 @@
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.4.0" targetFramework="net461" />
   <package id="Unity" version="4.0.1" targetFramework="net461" />
+  <package id="WindowsAPICodePack" version="1.1.0" targetFramework="net461" />
 </packages>
