--- a/src/MakePdf.Wpf/MakePdf.Wpf.csproj
+++ b/src/MakePdf.Wpf/MakePdf.Wpf.csproj
@@ -217,4 +217,10 @@
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>if $(ConfigurationName) == Release (
+cd $(ProjectDir)
+powershell -ExecutionPolicy Unrestricted .\CreateZip.ps1 .\bin\Release .\bin\$(SolutionName).zip
+)</PostBuildEvent>
+  </PropertyGroup>
 </Project>
