--- a/src/MakePdf.Wpf/MakePdf.Wpf.csproj
+++ b/src/MakePdf.Wpf/MakePdf.Wpf.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{31F31550-A83F-47D0-99B5-330B21E5EA33}</ProjectGuid>
     <OutputType>WinExe</OutputType>
     <RootNamespace>MakePdf.Wpf</RootNamespace>
-    <AssemblyName>MakePdf.Wpf</AssemblyName>
+    <AssemblyName>MakePdf</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
