--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -8,6 +8,7 @@
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Primitives" version="2.0.0" targetFramework="net461" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net461" />
   <package id="Prism.Core" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Unity" version="6.3.0" targetFramework="net461" />
   <package id="Prism.Wpf" version="6.3.0" targetFramework="net461" />
