--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -3,6 +3,7 @@
   <package id="CommonServiceLocator" version="1.3" targetFramework="net461" />
   <package id="MaterialDesignColors" version="1.1.2" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.1.953" targetFramework="net461" />
+  <package id="Microsoft.Extensions.CommandLineUtils" version="1.1.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.0" targetFramework="net461" />
