Fixed test failure

--- a/src/SimpleUpdater.Tests/SimpleUpdater.Tests.csproj
+++ b/src/SimpleUpdater.Tests/SimpleUpdater.Tests.csproj
@@ -16,4 +16,10 @@
     <ProjectReference Include="..\SimpleUpdater\SimpleUpdater.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="TestData\AppInfoTest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
