Fixed test failure

--- a/src/SimpleUpdater.Tests/SimpleUpdater.Tests.csproj
+++ b/src/SimpleUpdater.Tests/SimpleUpdater.Tests.csproj
@@ -15,9 +15,39 @@
   <ItemGroup>
     <ProjectReference Include="..\SimpleUpdater\SimpleUpdater.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="TestData\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Folder>
+    <Folder Include="TestData\UpdateDst\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Folder>
+    <Folder Include="TestData\UpdateSrc\">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Folder>
+  </ItemGroup>
 
   <ItemGroup>
     <None Update="TestData\AppInfoTest.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\UpdateDst\AppInfo.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\UpdateDst\dst1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\UpdateDst\dst2.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\UpdateSrc\AppInfo.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\UpdateSrc\src1.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+    <None Update="TestData\UpdateSrc\src2.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
