--- a/src/MakePdf.Wpf/MakePdf.Wpf.csproj
+++ b/src/MakePdf.Wpf/MakePdf.Wpf.csproj
@@ -138,6 +138,7 @@
     <Compile Include="Models\Core.cs" />
     <Compile Include="Models\Setting.cs" />
     <Compile Include="Models\Updater.cs" />
+    <Compile Include="MyInformation.cs" />
     <Compile Include="ViewModels\Dialogs\Common\OneButtonDialogViewModel.cs" />
     <Compile Include="ViewModels\Dialogs\Common\ProcessingDialogViewModel.cs" />
     <Compile Include="ViewModels\Dialogs\Common\TwoButtonDialogViewModel.cs" />
