--- a/appveyor.yml
+++ b/appveyor.yml
@@ -5,10 +5,9 @@ before_build:
 build:
   parallel: true
   project: src\MakePdf.sln
-after_test:
+test_script:
   # OpenCover でカバレッジを計測
   - src\OpenCover.bat vstest.console.exe
-  
   # Codecov への送信コマンド
   - "SET PATH=C:\\Python34;C:\\Python34\\Scripts;%PATH%"
   - pip install codecov
