--- a/src/MakePdf.Wpf/packages.config
+++ b/src/MakePdf.Wpf/packages.config
@@ -6,7 +6,15 @@
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net461" />
   <package id="MaterialDesignThemes" version="2.3.2-ci1036" targetFramework="net461" />
   <package id="Microsoft.Extensions.CommandLineUtils" version="1.1.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.FileExtensions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.Configuration.Json" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.DependencyInjection" version="2.0.0" targetFramework="net461" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="2.0.0" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Abstractions" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileProviders.Physical" version="2.0.1" targetFramework="net461" />
+  <package id="Microsoft.Extensions.FileSystemGlobbing" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.0.1" targetFramework="net461" />
   <package id="Microsoft.Extensions.Options" version="2.0.1" targetFramework="net461" />
