Change output log level

--- a/src/MakePdf.Wpf/NLog.config
+++ b/src/MakePdf.Wpf/NLog.config
@@ -21,6 +21,6 @@
   </targets>
 
   <rules>
-    <logger name="*" minlevel="Debug" writeTo="f,c" />
+    <logger name="*" minlevel="Info" writeTo="f,c" />
   </rules>
 </nlog>
